src/main/antlr/MyGrammarParser.java
// Generated from /home/joao/ine5426-compiladores/src/main/antlr/MyGrammar.g4 by ANTLR 4.9.1

    package main.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MyGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Def=1, Int=2, Float=3, String=4, Print=5, Read=6, Return=7, Break=8, If=9, 
		Else=10, For=11, New=12, Null=13, Ident=14, Int_constant=15, Float_constant=16, 
		String_constant=17, Whitespace=18, Lparen=19, Rparen=20, Lbrace=21, Rbrace=22, 
		Lbracket=23, Rbracket=24, Semicolon=25, Comma=26, Assign=27, Lesser=28, 
		Greater=29, Lesserequal=30, Greaterequal=31, Equal=32, Different=33, Plus=34, 
		Minus=35, Multiply=36, Divide=37, Module=38;
	public static final int
		RULE_program = 0, RULE_funclist = 1, RULE_funclistaux = 2, RULE_funcdef = 3, 
		RULE_paramlist = 4, RULE_paramlistaux = 5, RULE_statement = 6, RULE_vardecl = 7, 
		RULE_vardeclaux = 8, RULE_vartype = 9, RULE_atribstat = 10, RULE_atribstataux = 11, 
		RULE_funccall = 12, RULE_paramlistcall = 13, RULE_paramlistcallaux = 14, 
		RULE_printstat = 15, RULE_readstat = 16, RULE_returnstat = 17, RULE_ifstat = 18, 
		RULE_ifstataux = 19, RULE_forstat = 20, RULE_statelist = 21, RULE_statelistaux = 22, 
		RULE_allocexpression = 23, RULE_allocexpressionaux = 24, RULE_allocexpressionaux2 = 25, 
		RULE_expression = 26, RULE_expressionaux = 27, RULE_comparator = 28, RULE_numexpression = 29, 
		RULE_numexpressionaux = 30, RULE_term = 31, RULE_termaux = 32, RULE_minusplus = 33, 
		RULE_operators = 34, RULE_unaryexpr = 35, RULE_factor = 36, RULE_lvalue = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "funclist", "funclistaux", "funcdef", "paramlist", "paramlistaux", 
			"statement", "vardecl", "vardeclaux", "vartype", "atribstat", "atribstataux", 
			"funccall", "paramlistcall", "paramlistcallaux", "printstat", "readstat", 
			"returnstat", "ifstat", "ifstataux", "forstat", "statelist", "statelistaux", 
			"allocexpression", "allocexpressionaux", "allocexpressionaux2", "expression", 
			"expressionaux", "comparator", "numexpression", "numexpressionaux", "term", 
			"termaux", "minusplus", "operators", "unaryexpr", "factor", "lvalue"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'def'", "'int'", "'float'", "'string'", "'print'", "'read'", "'return'", 
			"'break'", "'if'", "'else'", "'for'", "'new'", "'null'", null, null, 
			null, null, null, "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", 
			"'='", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'+'", "'-'", "'*'", 
			"'/'", "'%'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Def", "Int", "Float", "String", "Print", "Read", "Return", "Break", 
			"If", "Else", "For", "New", "Null", "Ident", "Int_constant", "Float_constant", 
			"String_constant", "Whitespace", "Lparen", "Rparen", "Lbrace", "Rbrace", 
			"Lbracket", "Rbracket", "Semicolon", "Comma", "Assign", "Lesser", "Greater", 
			"Lesserequal", "Greaterequal", "Equal", "Different", "Plus", "Minus", 
			"Multiply", "Divide", "Module"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MyGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MyGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public FunclistContext funclist() {
			return getRuleContext(FunclistContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			setState(79);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Int:
			case Float:
			case String:
			case Print:
			case Read:
			case Return:
			case Break:
			case If:
			case For:
			case Ident:
			case Lbrace:
			case Semicolon:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				statement();
				}
				break;
			case Def:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				funclist();
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunclistContext extends ParserRuleContext {
		public FuncdefContext funcdef() {
			return getRuleContext(FuncdefContext.class,0);
		}
		public FunclistauxContext funclistaux() {
			return getRuleContext(FunclistauxContext.class,0);
		}
		public FunclistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funclist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).enterFunclist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).exitFunclist(this);
		}
	}

	public final FunclistContext funclist() throws RecognitionException {
		FunclistContext _localctx = new FunclistContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_funclist);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			funcdef();
			setState(82);
			funclistaux();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunclistauxContext extends ParserRuleContext {
		public FunclistContext funclist() {
			return getRuleContext(FunclistContext.class,0);
		}
		public FunclistauxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funclistaux; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).enterFunclistaux(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).exitFunclistaux(this);
		}
	}

	public final FunclistauxContext funclistaux() throws RecognitionException {
		FunclistauxContext _localctx = new FunclistauxContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_funclistaux);
		try {
			setState(86);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Def:
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				funclist();
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncdefContext extends ParserRuleContext {
		public TerminalNode Def() { return getToken(MyGrammarParser.Def, 0); }
		public TerminalNode Ident() { return getToken(MyGrammarParser.Ident, 0); }
		public TerminalNode Lparen() { return getToken(MyGrammarParser.Lparen, 0); }
		public ParamlistContext paramlist() {
			return getRuleContext(ParamlistContext.class,0);
		}
		public TerminalNode Rparen() { return getToken(MyGrammarParser.Rparen, 0); }
		public TerminalNode Lbrace() { return getToken(MyGrammarParser.Lbrace, 0); }
		public StatelistContext statelist() {
			return getRuleContext(StatelistContext.class,0);
		}
		public TerminalNode Rbrace() { return getToken(MyGrammarParser.Rbrace, 0); }
		public FuncdefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcdef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).enterFuncdef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).exitFuncdef(this);
		}
	}

	public final FuncdefContext funcdef() throws RecognitionException {
		FuncdefContext _localctx = new FuncdefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_funcdef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(Def);
			setState(89);
			match(Ident);
			setState(90);
			match(Lparen);
			setState(91);
			paramlist();
			setState(92);
			match(Rparen);
			setState(93);
			match(Lbrace);
			setState(94);
			statelist();
			setState(95);
			match(Rbrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamlistContext extends ParserRuleContext {
		public VartypeContext vartype() {
			return getRuleContext(VartypeContext.class,0);
		}
		public TerminalNode Ident() { return getToken(MyGrammarParser.Ident, 0); }
		public ParamlistauxContext paramlistaux() {
			return getRuleContext(ParamlistauxContext.class,0);
		}
		public ParamlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).enterParamlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).exitParamlist(this);
		}
	}

	public final ParamlistContext paramlist() throws RecognitionException {
		ParamlistContext _localctx = new ParamlistContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_paramlist);
		try {
			setState(102);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Int:
			case Float:
			case String:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				vartype();
				setState(98);
				match(Ident);
				setState(99);
				paramlistaux();
				}
				break;
			case Rparen:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamlistauxContext extends ParserRuleContext {
		public TerminalNode Comma() { return getToken(MyGrammarParser.Comma, 0); }
		public ParamlistContext paramlist() {
			return getRuleContext(ParamlistContext.class,0);
		}
		public ParamlistauxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramlistaux; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).enterParamlistaux(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).exitParamlistaux(this);
		}
	}

	public final ParamlistauxContext paramlistaux() throws RecognitionException {
		ParamlistauxContext _localctx = new ParamlistauxContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_paramlistaux);
		try {
			setState(107);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Comma:
				enterOuterAlt(_localctx, 1);
				{
				setState(104);
				match(Comma);
				setState(105);
				paramlist();
				}
				break;
			case Rparen:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public VardeclContext vardecl() {
			return getRuleContext(VardeclContext.class,0);
		}
		public TerminalNode Semicolon() { return getToken(MyGrammarParser.Semicolon, 0); }
		public AtribstatContext atribstat() {
			return getRuleContext(AtribstatContext.class,0);
		}
		public PrintstatContext printstat() {
			return getRuleContext(PrintstatContext.class,0);
		}
		public ReadstatContext readstat() {
			return getRuleContext(ReadstatContext.class,0);
		}
		public ReturnstatContext returnstat() {
			return getRuleContext(ReturnstatContext.class,0);
		}
		public IfstatContext ifstat() {
			return getRuleContext(IfstatContext.class,0);
		}
		public ForstatContext forstat() {
			return getRuleContext(ForstatContext.class,0);
		}
		public TerminalNode Lbrace() { return getToken(MyGrammarParser.Lbrace, 0); }
		public StatelistContext statelist() {
			return getRuleContext(StatelistContext.class,0);
		}
		public TerminalNode Rbrace() { return getToken(MyGrammarParser.Rbrace, 0); }
		public TerminalNode Break() { return getToken(MyGrammarParser.Break, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_statement);
		try {
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Int:
			case Float:
			case String:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				vardecl();
				setState(110);
				match(Semicolon);
				}
				break;
			case Ident:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				atribstat();
				setState(113);
				match(Semicolon);
				}
				break;
			case Print:
				enterOuterAlt(_localctx, 3);
				{
				setState(115);
				printstat();
				setState(116);
				match(Semicolon);
				}
				break;
			case Read:
				enterOuterAlt(_localctx, 4);
				{
				setState(118);
				readstat();
				setState(119);
				match(Semicolon);
				}
				break;
			case Return:
				enterOuterAlt(_localctx, 5);
				{
				setState(121);
				returnstat();
				setState(122);
				match(Semicolon);
				}
				break;
			case If:
				enterOuterAlt(_localctx, 6);
				{
				setState(124);
				ifstat();
				}
				break;
			case For:
				enterOuterAlt(_localctx, 7);
				{
				setState(125);
				forstat();
				}
				break;
			case Lbrace:
				enterOuterAlt(_localctx, 8);
				{
				setState(126);
				match(Lbrace);
				setState(127);
				statelist();
				setState(128);
				match(Rbrace);
				}
				break;
			case Break:
				enterOuterAlt(_localctx, 9);
				{
				setState(130);
				match(Break);
				setState(131);
				match(Semicolon);
				}
				break;
			case Semicolon:
				enterOuterAlt(_localctx, 10);
				{
				setState(132);
				match(Semicolon);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardeclContext extends ParserRuleContext {
		public VartypeContext vartype() {
			return getRuleContext(VartypeContext.class,0);
		}
		public TerminalNode Ident() { return getToken(MyGrammarParser.Ident, 0); }
		public VardeclauxContext vardeclaux() {
			return getRuleContext(VardeclauxContext.class,0);
		}
		public VardeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).enterVardecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).exitVardecl(this);
		}
	}

	public final VardeclContext vardecl() throws RecognitionException {
		VardeclContext _localctx = new VardeclContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_vardecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			vartype();
			setState(136);
			match(Ident);
			setState(137);
			vardeclaux();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardeclauxContext extends ParserRuleContext {
		public TerminalNode Lbracket() { return getToken(MyGrammarParser.Lbracket, 0); }
		public TerminalNode Int_constant() { return getToken(MyGrammarParser.Int_constant, 0); }
		public TerminalNode Rbracket() { return getToken(MyGrammarParser.Rbracket, 0); }
		public VardeclauxContext vardeclaux() {
			return getRuleContext(VardeclauxContext.class,0);
		}
		public VardeclauxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardeclaux; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).enterVardeclaux(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).exitVardeclaux(this);
		}
	}

	public final VardeclauxContext vardeclaux() throws RecognitionException {
		VardeclauxContext _localctx = new VardeclauxContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_vardeclaux);
		try {
			setState(144);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Lbracket:
				enterOuterAlt(_localctx, 1);
				{
				setState(139);
				match(Lbracket);
				setState(140);
				match(Int_constant);
				setState(141);
				match(Rbracket);
				setState(142);
				vardeclaux();
				}
				break;
			case Semicolon:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VartypeContext extends ParserRuleContext {
		public TerminalNode Int() { return getToken(MyGrammarParser.Int, 0); }
		public TerminalNode Float() { return getToken(MyGrammarParser.Float, 0); }
		public TerminalNode String() { return getToken(MyGrammarParser.String, 0); }
		public VartypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vartype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).enterVartype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).exitVartype(this);
		}
	}

	public final VartypeContext vartype() throws RecognitionException {
		VartypeContext _localctx = new VartypeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_vartype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Int) | (1L << Float) | (1L << String))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtribstatContext extends ParserRuleContext {
		public LvalueContext lvalue() {
			return getRuleContext(LvalueContext.class,0);
		}
		public TerminalNode Assign() { return getToken(MyGrammarParser.Assign, 0); }
		public AtribstatauxContext atribstataux() {
			return getRuleContext(AtribstatauxContext.class,0);
		}
		public AtribstatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribstat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).enterAtribstat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).exitAtribstat(this);
		}
	}

	public final AtribstatContext atribstat() throws RecognitionException {
		AtribstatContext _localctx = new AtribstatContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_atribstat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			lvalue();
			setState(149);
			match(Assign);
			setState(150);
			atribstataux();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtribstatauxContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AllocexpressionContext allocexpression() {
			return getRuleContext(AllocexpressionContext.class,0);
		}
		public FunccallContext funccall() {
			return getRuleContext(FunccallContext.class,0);
		}
		public AtribstatauxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribstataux; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).enterAtribstataux(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).exitAtribstataux(this);
		}
	}

	public final AtribstatauxContext atribstataux() throws RecognitionException {
		AtribstatauxContext _localctx = new AtribstatauxContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_atribstataux);
		try {
			setState(155);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(152);
				expression();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(153);
				allocexpression();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(154);
				funccall();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunccallContext extends ParserRuleContext {
		public TerminalNode Ident() { return getToken(MyGrammarParser.Ident, 0); }
		public TerminalNode Lparen() { return getToken(MyGrammarParser.Lparen, 0); }
		public ParamlistcallContext paramlistcall() {
			return getRuleContext(ParamlistcallContext.class,0);
		}
		public TerminalNode Rparen() { return getToken(MyGrammarParser.Rparen, 0); }
		public FunccallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funccall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).enterFunccall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).exitFunccall(this);
		}
	}

	public final FunccallContext funccall() throws RecognitionException {
		FunccallContext _localctx = new FunccallContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_funccall);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(Ident);
			setState(158);
			match(Lparen);
			setState(159);
			paramlistcall();
			setState(160);
			match(Rparen);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamlistcallContext extends ParserRuleContext {
		public TerminalNode Ident() { return getToken(MyGrammarParser.Ident, 0); }
		public ParamlistcallauxContext paramlistcallaux() {
			return getRuleContext(ParamlistcallauxContext.class,0);
		}
		public ParamlistcallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramlistcall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).enterParamlistcall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyGrammarListener ) ((MyGrammarListener)listener).exitParamlistcall(this);
		}
	}

	public final ParamlistcallContext paramlistcall() throws RecognitionException {
		ParamlistcallContext _localctx = new ParamlistcallContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_paramlistcall);
		try {
			setState(165);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Ident:
				enterOuterAlt(_localctx, 1);
				{
				setState(162);
				match(Ident);
				setState(163);
				paramlistcallaux();
				}
				break;
			case Rparen:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
